# pakery

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY_TESTING.md  SECURITY_TESTING_ROADMAP.md
.cargo/: config.toml  mutants.toml
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml  ct.yml  dudect.yml  fuzz-long.yml  fuzz.yml  mutants.yml  publish.yml
dudect/: .gitignore  Cargo.toml  README.md
dudect/src/: main.rs
fuzz/: Cargo.toml  README.md
fuzz/examples/: gen_seeds.rs
fuzz/fuzz_targets/: cpace_flow.rs  group_decode.rs  opaque_deserialize.rs  opaque_flow.rs  spake2_flow.rs  spake2plus_flow.rs
fuzz/seeds/cpace_flow/: p256-mode0-to-initiator  p256-mode0-to-responder  p256-mode2-to-initiator  p256-mode2-to-responder  r255-mode0-to-initiator  r255-mode0-to-responder  r255-mode2-to-initiator  r255-mode2-to-responder
fuzz/seeds/group_decode/: p256-dh  p256-dh-pk  p256-oprf-eval  p256-oprf-finalize  p256-point  p256-uniform  p256-wide-scalar  r255-dh  r255-dh-pk  r255-oprf-eval  r255-oprf-finalize  r255-point  r255-uniform  r255-wide-scalar
fuzz/seeds/opaque_deserialize/: honest-p256-0  honest-p256-1  honest-p256-2  honest-p256-3  honest-p256-4  honest-p256-5  honest-p256-6  honest-p256-7  honest-r255-0  honest-r255-1  honest-r255-2  honest-r255-3  honest-r255-4  honest-r255-5  honest-r255-6  honest-r255-7  rfc9807-r255-0  rfc9807-r255-1  rfc9807-r255-2  rfc9807-r255-3  rfc9807-r255-5  rfc9807-r255-6  rfc9807-r255-7
fuzz/seeds/opaque_flow/: patterned  regression-issue-13-compact-sec1-tag
fuzz/seeds/spake2_flow/: p256-share-to-a  p256-share-to-b  r255-share-to-a  r255-share-to-b
fuzz/seeds/spake2plus_flow/: p256-share-p  p256-share-v  r255-confirm-p  r255-share-p  r255-share-v
pake-core/: Cargo.toml
pake-core/src/: encoding.rs  lib.rs  secret.rs
pake-core/src/crypto/: ksf.rs
pake-cpace/: Cargo.toml
pake-cpace/src/: ciphersuite.rs  error.rs  generator.rs  initiator.rs  lib.rs  responder.rs  transcript.rs
pake-crypto/: Cargo.toml
pake-crypto/src/: hash.rs  hash_sha256.rs  kdf.rs  kdf_sha256.rs  ksf.rs  lib.rs  mac.rs  mac_sha256.rs  oprf_common.rs  oprf_ristretto.rs  p256_group.rs  ristretto255.rs
pake-opaque/: Cargo.toml
pake-opaque/src/: envelope.rs  error.rs  key_derivation.rs  login.rs  messages.rs  oprf.rs  registration.rs  server_setup.rs
pake-spake2/: Cargo.toml
pake-spake2/src/: ciphersuite.rs  encoding.rs  error.rs  party_a.rs  party_b.rs  transcript.rs
pake-spake2plus/: Cargo.toml
pake-spake2plus/src/: prover.rs  transcript.rs  verifier.rs
pake-tests/: Cargo.toml
pake-tests/tests/: cpace_p256_vectors.rs  cpace_vectors.rs  opaque_vectors.rs  spake2_p256_vectors.rs  spake2_vectors.rs  spake2plus_p256_vectors.rs
pakery-core/: Cargo.toml
pakery-core/src/: ct.rs  encoding.rs  error.rs  lib.rs  secret.rs
pakery-core/src/crypto/: dh.rs  group.rs  kdf.rs  ksf.rs  mac.rs  oprf.rs
pakery-cpace/: Cargo.toml  README.md
pakery-cpace/src/: error.rs  initiator.rs  responder.rs
pakery-crypto/: Cargo.toml  README.md
pakery-crypto/src/: kdf.rs  kdf_sha256.rs  ksf.rs  oprf_common.rs  oprf_p256.rs  oprf_ristretto.rs  p256_dh.rs  p256_group.rs  ristretto255.rs
pakery-opaque/: Cargo.toml  README.md
pakery-opaque/src/: envelope.rs  error.rs  key_derivation.rs  lib.rs  login.rs  messages.rs  oprf.rs  registration.rs  server_setup.rs  test_mocks.rs
pakery-spake2/: Cargo.toml  README.md
pakery-spake2/src/: encoding.rs  error.rs  lib.rs  party_a.rs  party_b.rs  test_mocks.rs  transcript.rs
pakery-spake2plus/: Cargo.toml  README.md
pakery-spake2plus/src/: encoding.rs  error.rs  lib.rs  prover.rs  registration.rs  test_mocks.rs  transcript.rs  verifier.rs
pakery-tests/: Cargo.toml  README.md  valgrind-ct.supp
pakery-tests/tests/: cpace_p256_vectors.rs  cpace_vectors.rs  ct_flows.rs  differential_opaque.rs  negative_vectors.rs  opaque_p256_vectors.rs  opaque_vectors.rs  prop_cpace.rs  prop_opaque.rs  prop_spake2.rs  prop_spake2plus.rs  spake2_p256_vectors.rs  spake2_vectors.rs  spake2plus_p256_vectors.rs  spake2plus_vectors.rs
pakery-tests/vectors/: negative_vectors.json
