[workspace]
resolver = "2"
members = ["pakery-core", "pakery-cpace", "pakery-crypto", "pakery-opaque", "pakery-spake2", "pakery-spake2plus", "pakery-tests"]
# fuzz/ and dudect/ are their own workspaces (nightly-only cargo-fuzz harness;
# dudect-bencher advisory timing harness with MSRV 1.85); keeping them out of
# the root workspace shields the MSRV / no_std / minimal-versions / wasm CI
# jobs from their dependencies.
exclude = ["fuzz", "dudect"]

[workspace.package]
version = "0.2.1"
edition = "2021"
rust-version = "1.79"
license = "MIT OR Apache-2.0"
repository = "https://github.com/djx-y-z/pakery"
authors = ["pakery contributors"]

[workspace.dependencies]
pakery-core = { version = "0.2.1", path = "pakery-core", default-features = false }
pakery-cpace = { version = "0.2.1", path = "pakery-cpace" }
pakery-opaque = { version = "0.2.1", path = "pakery-opaque" }
pakery-spake2 = { version = "0.2.1", path = "pakery-spake2" }
pakery-spake2plus = { version = "0.2.1", path = "pakery-spake2plus" }
pakery-crypto = { version = "0.2.1", path = "pakery-crypto" }
group = "0.13"
ff = "0.13"
digest = "0.10"
rand_core = { version = "0.9", default-features = false }
zeroize = { version = "1.8", features = ["derive"] }
subtle = { version = "2.6", default-features = false }
zeroize_derive = "1.3.3"
sha2 = "0.10"
curve25519-dalek = { version = "4.1", features = ["group"] }
hkdf = "0.12"
hmac = "0.12"
argon2 = { version = "0.5", default-features = false, features = ["alloc"] }
p256 = { version = "0.13", default-features = false, features = ["arithmetic", "hash2curve"] }
generic-array = "0.14"
