[package]
name = "pakery-tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Test vectors and integration tests for pakery crates"
publish = false

[features]
default = []
p256 = ["pakery-crypto/p256", "dep:p256"]
argon2 = ["pakery-crypto/argon2"]
# Differential testing against opaque-ke v4 (RFC 9807 peer implementation).
# Pulls a large dependency tree — deliberately not a default feature; enabled
# in CI via --all-features. Covers both suites, hence implies `p256`.
differential = ["dep:opaque-ke", "dep:sha2", "p256", "p256/voprf"]
# PRIVATE (roadmap item 6): constant-time verification harness (ctgrind
# pattern). Turns pakery-core's `ct` helpers into real Valgrind memcheck
# client requests and enables the `ct_flows` integration test, which ct.yml
# runs under `valgrind --track-origins=yes --error-exitcode=99` in debug and
# release. Outside Valgrind the marks are runtime no-ops, so this feature is
# safe (if pointless) in ordinary `--all-features` test runs.
__ctgrind = ["pakery-core/__ctgrind"]

[dependencies]
pakery-core = { workspace = true, default-features = true }
pakery-cpace = { workspace = true }
pakery-opaque = { workspace = true, features = ["test-utils"] }
pakery-spake2 = { workspace = true, features = ["test-utils"] }
pakery-spake2plus = { workspace = true, features = ["test-utils"] }
pakery-crypto = { workspace = true, features = ["cpace", "spake2", "spake2plus", "opaque"] }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand_core = { workspace = true, features = ["os_rng"] }
curve25519-dalek = { workspace = true }
p256 = { workspace = true, optional = true }
# Differential-testing deps (Item 5 of SECURITY_TESTING_ROADMAP.md). Cargo does
# not support optional dev-dependencies, so these live in [dependencies] behind
# the `differential` feature (this crate is publish = false and test-only, so
# the distinction is immaterial). opaque-ke 4 is on the rand 0.8 wave; the RNG
# traits its API requires are reached through its `opaque_ke::rand` re-export.
# sha2 is needed to name the hash in opaque-ke's `TripleDh<_, Hash>` parameter.
opaque-ke = { version = "4", default-features = false, features = ["ristretto255"], optional = true }
sha2 = { workspace = true, optional = true }

[dev-dependencies]
# proptest 1.11+ has MSRV 1.85 (> workspace 1.79) but is a dev-dependency of this
# test-only crate; the MSRV CI job (`cargo check --workspace`) does not build
# dev-dependencies and proptest's manifest is edition 2021, so 1.79 parses it.
# Verified locally with `cargo +1.79 check --workspace`.
proptest = "1"
rand_chacha = "0.9"
